--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 .main {
     height: 700px;
-    background-image: url(img/flatbackground.png);
+    background-image: url(img/code.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -13,7 +13,7 @@ body {
 
 @media screen and (min-width: 1000px) {
     #container {
-        height: 700px;
+        height: 100px;
         width: 1000px;
         margin: 0 auto;
     }
@@ -75,7 +75,7 @@ h2 {
 #head {
     width: 100%;
     height: 350px;
-    background-color: #2ecc71;
+    background-image: url(img/code.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -98,36 +98,39 @@ h2 {
     padding-left: 46px;
 }
 
-.one {
-    margin-top: 46px;
+.guess {
+    height: 300px;
+    width: 420px;
+    float: left;
+    margin-left: 100px;
+    margin-top: 20px;
 }
 
-.two {
-    margin-top: 46px;
+.site {
+    position: absolute;
+    top: 105%;
+    left: 25%;
+    font-size: 20px;
 }
-
-.three {
-    margin-top: 46px;
+.site > a {
+    font-size: 20px;
+    text-decoration: none;
+    color: black;
 }
-
-.four {
-    margin-top: 46px;
-}
-
 
 /*Footer Section*/
 
 footer.portfolio {
     width: 100%;
     height: 450px;
-    background-color: #2ecc71;
+    background-color: #008000;
     margin-top: 350px;
 }
 
 footer.about {
     width: 100%;
     height: 450px;
-    background-color: #2ecc71;
+    background-color: #008000;
     margin-top: 150px;
 }
 
@@ -178,7 +181,7 @@ input.submit {
     width: 70px;
     height: 40px;
     background-color: #ffffff;
-    color: #2ecc71;
+    color: #008000;
     border: none;
     border-radius: 5px;
 }
@@ -191,14 +194,14 @@ input.submit:hover {
 /*About Page*/
 
 p.about {
-    margin-top: 150px;
+    margin-top: 100px;
     margin-left: 40px;
     width: 400px;
     font-size: 20px;
 }
 
 .profile {
-    margin-top: 0px;
+    margin-top: -10px;
     margin-right: 150px;
     float: right;
     width: 400px;
@@ -206,4 +209,5 @@ p.about {
     border-radius: 30%;
     border-style: groove;
     border-width: 10px;
+    border-color: green;
 }
